--- a/app/javascript/css/main.scss
+++ b/app/javascript/css/main.scss
@@ -346,7 +346,7 @@ a.btn-nav-accordion, a.btn-nav-accordion:hover {
 
   .no-actions {
     pointer-events: none;
-    color: var(--grey-100);
+    color: var(--grey-120);
   }
 }
 
